# AppFoundryLab

./: .env.docker  .env.docker.local  .env.example  .env.single-host.example  .gitignore  AGENTS.md  CHANGELOG.md  PROGRESS.md  README.md  docker-compose.security.yml  docker-compose.single-host.yml  docker-compose.yml  run_bench.sh  toolchain.versions.json
.github/: dependabot.yml
backend/: go.mod  go.sum
backend/core/calculator/: Cargo.toml  Dockerfile  build.rs
backend/core/calculator/src/: main.rs
deploy/: docker-compose.observability.operator.mtls.yml  docker-compose.observability.operator.yml  docker-compose.observability.yml  docker-compose.single-host.ghcr.yml
docs/: api-degradation-runbook.md  appfoundrylab-teknik-analiz.md  branch-protection-required-checks.md  delivery-workflow-governance-matrix.md  dependency-degradation-runbook.md  deployment-strategy.md  gelistirmePlanı.md  latency-regression-runbook.md  load-shedding-policy.json  load-shedding-runbook.md  logger-pipeline-runbook.md  nightly-workflow-governance-matrix.md  operator-observability-runbook.md  release-checklist.json  release-policy.md  runtime-incident-response.md
frontend/: .playwright-linux.env  Dockerfile  Dockerfile.prod  README.md  astro.config.mjs  biome.json  nginx.prod.conf  package.json  playwright.config.mjs  playwright.live.config.mjs  runtime-config.js.template  tailwind.config.cjs  tsconfig.json  vitest.config.ts
multi_agent/: config.md
presets/: minimal.env  secure.env  standard.env
scripts/: README.md  archive-runtime-report.sh  attest-release-ledger.sh  dev-up.sh  (+43 more)
(+235 files in other folders)
