[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.14"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12", features = ["transport", "tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
protoc-bin-vendored = "3.1.0"
tonic-build = "0.12"
